Resolves: tdf#122931 crash on closing b&n dialog after gallery menu activated

Change-Id: I3284edc2ed64895642bd12ea479a1aba8023b2ba